# CHAM_2c_8b

./: CHAM_2c_8b  LICENSE  README.md
chisel/: ;  cp_gen_pp.txt  gen_pp.txt
chisel/src/main/scala/: Buffer.scala  INTT.scala  Preprocess.scala
mvp_sdk/: .gitignore  CMakeLists.txt  README.md  code_coverage.sh  python_example.py
mvp_sdk/api_examples/: CMakeLists.txt  demo_common.h  demo_end_to_end.cc  demo_standalone.cc  demo_user_key.cc
mvp_sdk/cli/: CMakeLists.txt  argparse.hpp  mvp_cli.cc
mvp_sdk/include/mvp_public/: CMakeLists.txt  api_def.h  api_impl.cc  common.h  errors.h  fpga_handler.cc  fpga_handler.h  internal.cc  mod_switch.cc  mod_switch.h  mvp_context.cc  mvp_context.h  mvp_impl.cc  mvp_priv_impl.cc  status.cc  status.h  types.h  version.h
mvp_sdk/include/mvp_public/F3/: Makefile  mvp_fpga_lib.h  mvp_fpga_reg.h
mvp_sdk/include/mvp_public/util/: ThreadPool.h  common.cc  common.h  defines.h  istringviewstream.h  math.h  mem_guard.h  seal.cc  seal.h  slotful_ntt.cc  slotful_ntt.h  timer.h
mvp_sdk/python/: CMakeLists.txt  wrapper.cc  wrapper.h
mvp_sdk/scripts/: build-deps.sh  build_f3.sh  common.sh
mvp_sdk/tests/: CMakeLists.txt  mvp_basic_test.cc  mvp_exception_test.cc  mvp_matvec_test.cc
sim/: Makefile  vivado_pid1051121.str  vivado_pid2164353.str  vivado_pid2874397.str  vivado_pid3159736.str  vivado_pid3534925.str  vivado_pid415443.str  vivado_pid62718.str  vivado_pid779668.str  vivado_pid834503.str  vivado_pid981994.str
sim/scripts/: create_prj.tcl  run_full_sim.tcl  run_partial_sim.tcl
sim/top_tb/: current_tb_top.sv  monitor.sv  task.sv  tb_axi_bram.v  tb_top.sv
sim/top_tb/utils/: gen_bus.py  mod_testvec.py  prepare_axi_stg_data.py  prepare_ddr.py  prepare_ksk_uram.py  prepare_vec_uram.py  tb_top.py
sim/xsim/: uram_k0.mem  uram_k1.mem  uram_k10.mem  uram_k11.mem  uram_k2.mem  uram_k3.mem  uram_k4.mem  uram_k5.mem  uram_k6.mem  uram_k7.mem  uram_k8.mem  uram_k9.mem
src/: mvp.v  mvp_axil.v  mvp_top.v
src/DP/: dp_core.v  dp_ctxt_polyvec.v  dp_top.v  dp_tripple_pp_buffer.v  madd_top.v
src/addx/: cross_aggressive_last_seq.sv
src/axi/: axi_axi2bram.v  axi_axis2bram.v  axi_bram2axi.v  axi_bram2axis.v  axi_data_rd_top.v  axi_data_wr_top.v  axi_read_master.sv  axi_read_master.v  axi_write_master.sv  counter.v  ksk_buffer.v  pre_input_transposer.v  sdpram_temp.v
src/intt/: intt_core.v  intt_cu.v
src/ntt_intt_common/: single_port_rom.v
src/preprocess/: poly_ram.v  preprocess_top.v  preprocess_top_chisel.v
src/reducebuffer/: reduce_buffer.sv
tv/4x4096/t0000/: ddr_in_mat.txt
